--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 20px;
-    background: linear-gradient(to right, #85a6ca, #faf5f0);
+    background: linear-gradient(to right, #7392b4, #faf5f0);
     color: #333;
     margin: 0px;
     display: flex;
@@ -14,39 +14,26 @@ body {
 h1{
     font-size: 42px;
     margin-top: 200px;
-    color: #035705cb;
+    color: #0d5b57cb;
     transition: color 0.3s ease, transform 0.3s ease;
     will-change: transform, color;
 }
 h1:hover{
-    color: #fafbd1;
+    color: #145769;
     transform: scale(1.1);
-}
-p {
-    font-weight: bold;
-    color: #0e5a07;
-    text-align: right;
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    margin: 0;
-    transition: font-size 0.3s ease;
-}
-p:hover{
-    font-size: 35px;
 }
 input{
     background-color: #ffffff;
     padding: 12px;
     border-radius: 8px;
-    border: 2px solid #8fb781;
+    border: 2px solid #045259;
     outline: none;
     transition: border-color 0.3s ease;
 }
 button {
     padding: 12px 24px;
     margin-top: 14px;
-    background-color: #3e9241;
+    background-color: #1e7c6c;
     color: white;
     border: none;   
     border-radius: 10px;
@@ -56,7 +43,7 @@ button {
     will-change: transform, background-color;
 }
 button:hover {
-    background-color: #2e6837;
+    background-color:       #0e5860;
     transform: translateY(-3px);
 }
 button:active{
@@ -75,7 +62,7 @@ li {
     justify-content: space-between;
     align-items: center;
     padding: 5px 12px;
-    background: #1c6b384e;
+    background: #ffffff83;
     margin: 8px;
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
@@ -93,7 +80,7 @@ li:hover{
 }
 .delete-btn {
     display: block;   
-    background: #E57373;
+    background: #d86565;
     color: white;
     border: none;
     padding: 4px;
